# Ares

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEX.md  CONTEXT.md  Dockerfile.api  Dockerfile.ui  Makefile  README.md  TODO.md  WAT_Architecture.md  memory.md  package-lock.json  package.json  pyproject.toml  trigger.config.ts  tsconfig.json
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-01_212514-ares-copywriting-brain-hormozi-sultanic-plan.md
app/: dependencies.py  main.py
app/api/: agent_assets.py  agent_installs.py  agents.py  approvals.py  ares.py  ares_chief_of_staff.py  audit.py  catalog.py  commands.py  deals.py  hermes_tools.py  (+21 more)
deploy/: Caddyfile.tailnet.example  docker-compose.vps.example.yml  nginx.conf
docs/: activation-readiness-handoff.md  curative-title-data-pipeline.md  hermes-ares-integration-runbook.md  hermes-ares-runtime-adapter-contract.md  hermes-ares-trigger-supabase-runbook.md  preview-staging-rollout.md  production-promotion.md  production-readiness-handoff.md
scripts/: activation_readiness.py  ares_chief_of_staff_digest.py  preview_rollout_readiness.py  probate_autopilot_doctor.py  probate_autopilot_env_contract.py  probate_source_file_payload.py  production_promotion_readiness.py  rollout_evidence.py  slack_notification_readiness.py  smoke_full_stack_cohesion.py  smoke_hermes_runtime_adapter.py  smoke_provider_readiness.py  sms_agent_archive_export.py
supabase/: config.toml
tests/: conftest.py  test_package_layout.py
trigger/: bootstrap.ts  package-lock.json  package.json  trigger.config.ts  tsconfig.json
(+1175 files in other folders)
